# service-market-sdk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  mt_paas_config.example.yaml  pyproject.toml  사용포트_사용리소스정보.txt
.github/ISSUE_TEMPLATE/: config.yml  partner_participation.md
.github/workflows/: welcome-partner.yml
docs/: AI_SERVICE_QUICKSTART.md  DESIGN.md  FRAMEWORK_DESIGN.md  LTI_STYLE_DESIGN.md  SERVICE_INTEGRATION_GUIDE.md  SERVICE_MARKET_INTEGRATION_MANUAL_20250201.md
docs/old/: ADVISOR_MULTI_TENANT_GUIDE.md  ARCHITECTURE_DIAGRAM.md  CONSULTING_REQUEST.md  CONSULTING_REQUEST_v2.md  MT-PAAS-Complete-Developer-Guide.md  OPENSOURCE_READINESS_CHECK.md  STANDARD_API_EXTENSION_PLAN.md
mt_paas/: __init__.py  config.py  setup.py
mt_paas/core/: __init__.py  database.py  lifecycle.py  manager.py  models.py  schemas.py
mt_paas/manifest/: __init__.py  schema.py  validator.py
mt_paas/market/: __init__.py  api.py  client.py  models.py
mt_paas/middleware/: __init__.py  tenant.py
mt_paas/standard_api/: __init__.py  handler.py  handler_v2.py  models.py  models_v2.py  router.py  router_v2.py
sandbox/: README.md
sandbox/sample_service/: .env.example  README.md  server.py
sandbox/sdk/: __init__.py  cli.py  client.py  requirements.txt  tester.py  validator.py
sandbox/simulator/: README_20250201.md  __init__.py  application_manager.py  cli.py  database.py  fixtures.py  models.py  requirements.txt  result_store.py  webhook_simulator.py
sandbox/tests/: test_webhook.sh
tests/: __init__.py  conftest.py  test_core.py  test_integration.py  test_integration_v2.py  test_market_integration.py  test_simulator.py  test_standard_api_v2.py
